# outetts-server

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pixi.toml  pyproject.toml  ruff.toml  test.py
app/: app.py  bria.json  bria_long.lab  create_speaker.py  requirements.txt  tokenizer.py  zh_num2words.py
test/: tts.py
